# template

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/app/: README.md
apps/site/: README.md
scripts/: README.md  export-openapi.py
services/api/: Dockerfile  README.md  pyproject.toml
services/api/app/: __init__.py  main.py
services/api/app/api/v1/: health.py  public.py  router.py
services/api/app/core/: __init__.py  config.py  responses.py  security.py
services/api/tests/: test_app.py  test_security.py
